<resources>
    <string name="app_name">Daily Cost Tracker</string>
    <string name="add_one">Add</string>
    <string name="month_expense">Expense Monthly</string>
    <string name="month_income">Income Monthly</string>
    <string name="budget">Budget</string>
    <string name="set_budget">Set Budget</string>
    <string name="see_excel">Chart Analysis</string>
    <string name="add_comment">Add comment</string>
    <string name="remark">Comment</string>
    <string name="ensure">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="please_input_time">Please input time（24-hour）</string>
    <string name="please_search_info">Please input search</string>
    <string name="select_date">Select Date</string>
    <string name="data_empty">No data exists</string>
    <string name="about">About</string>
    <string name="about_appinfo">App Info</string>
    <string name="about_version">Version</string>
    <string name="about_1">1.0.0</string>
    <string name="about_app">About App</string>
    <string name="about_balabala">Know where your money goes</string>
    <string name="about_develop">Developer</string>
    <string name="about_me">About me</string>
    <string name="about_loc">Sit Invercargill, New Zealand</string>
    <string name="about_email">Send email</string>
    <string name="about_email2">Email：jamesou168@gmail.com</string>
    <string name="about_code">Source code</string>
    <string name="about_codeinfo">Git hub：https://github.com/jamesou/dailycost</string>
    <string name="setting">Setting</string>
    <string name="hy_record">Records</string>
    <string name="history_record">Historic Records</string>
    <string name="categoryBean_record">Catagories</string>
    <string name="at_info">Analysis</string>
    <string name="app_help">Help</string>
    <string name="account_info">Bill Analysis</string>
    <string name="history_info">Bill Records Monthly</string>
    <string name="not_data">No data exists</string>
    <string name="clear_data">Clear data</string>
    <string name="category_manager">Categories Management</string>
    <string name="data_import">Data import</string>
    <string name="data_export">Data export</string>
    <string name="menu_items">Menu</string>
    <string name="time_items">Time option</string>
    <string name="help_record">Rapid accounting</string>
    <string name="help_record_detail">Click the "Write Down" button, select the billing category, and enter the amount</string>
    <string name="help_record_oper">Billing operation</string>
    <string name="help_record_oper_detail">Long press the billing record to select edit and delete actions</string>
    <string name="help_record_search">Bill retrieval</string>
    <string name="help_record_search_detail">The search contents include remarks and categories, and fuzzy search is used</string>
    <string name="help_category_manage">Catagories Management</string>
    <string name="help_category_manage_detail">users can adjust the order of the list and customise the categories of bills they want to display</string>
    <string name="help_record_ana">Statistics Analysis</string>
    <string name="help_record_ana_detail">The system supports monthly or annual analysis. A bar chart and category percentage are displayed </string>
    <string name="help_record_view">Historic data view</string>
    <string name="help_record_view_detail">Use the calendar to display, the calendar will show the income and expenses, click the calendar to view the consumption details</string>
    <string name="help_record_cal">Display on calendar</string>
    <string name="help_record_cal_detail">Solar and lunar calendars can be displayed</string>
    <string name="help_budget">Budget Plan</string>
    <string name="help_budget_detail">Set the budget and display the corresponding budget surplus</string>
    <string name="help_display_money">Display money</string>
    <string name="help_display_money_detail">Click eyes icon to hide your amount number</string>
    <string name="help_data_bak">Data Backup</string>
    <string name="help_data_bak_detail">Click export to backup your data</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="go_turn"><![CDATA[>]]></string>
    <string name="introduce">Track your spending</string>
    <string name="web_login_url">http://192.168.68.67:8080/</string>
<!--    <string name="web_login_url">http://148.100.78.14:8080/</string>-->
</resources>