<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:id="@+id/about_iv_back"
                       android:src="@mipmap/it_back"
                       android:onClick="onClick"
                       android:layout_marginLeft="10sp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_centerInParent="true"
                      android:text="@string/about"
                      android:textSize="18sp"
                      android:textStyle="bold"
                      android:textColor="@color/black"/>
        </RelativeLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:padding="20sp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/about_appinfo"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/about_version"
                  android:layout_marginTop="10sp"
                  android:textStyle="bold"
                  android:textSize="16sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/about_1"
                  android:layout_marginTop="8sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_marginTop="10sp"
                  android:text="@string/about_app"
                  android:textSize="16sp"
                  android:textStyle="bold"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/about_balabala"
                  android:layout_marginTop="8sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/about_develop"
                  android:layout_marginTop="8sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_marginTop="10sp"
                  android:text="@string/about_me"
                  android:textSize="16sp"
                  android:textStyle="bold"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/about_loc"
                  android:layout_marginTop="8sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_marginTop="10sp"
                  android:text="@string/about_email"
                  android:textSize="16sp"
                  android:textStyle="bold"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/about_email2"
                  android:layout_marginTop="8sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_marginTop="10sp"
                  android:text="@string/about_code"
                  android:textSize="16sp"
                  android:textStyle="bold"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/about_codeinfo"
                  android:layout_marginTop="8sp"/>
    </LinearLayout>
</LinearLayout>