<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_f3f3f3" android:orientation="vertical">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:id="@+id/setting_iv_back"
                   android:src="@mipmap/it_back"
                   android:layout_marginLeft="10sp"
                   android:onClick="onClick"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/setting"
                  android:layout_centerInParent="true"
                  android:textStyle="bold"
                  android:textSize="18sp"/>
    </RelativeLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@color/white">
<!--        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"-->
<!--                   android:src="@mipmap/it_tyoe"-->
<!--                   android:layout_marginTop="5sp"-->
<!--                   android:layout_marginLeft="10sp"/>-->
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/setting_category_manager"
                  android:text="@string/category_manager"
                  android:onClick="onClick"
                  android:textSize="16sp"
                  android:textStyle="bold"
                  android:padding="8sp"
                  android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@color/white">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@mipmap/in_borrow"
                   android:layout_marginTop="5sp"
                   android:layout_marginLeft="10sp"
                   />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/setting_data_import"
                  android:text="@string/data_import"
                  android:onClick="onClick"
                  android:textSize="16sp"
                  android:textStyle="bold"
                  android:padding="8sp"
                  android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@color/white">

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/setting_data_export"
                  android:text="@string/data_export"
                  android:onClick="onClick"
                  android:textSize="16sp"
                  android:textStyle="bold"
                  android:padding="8sp"
                  android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@color/white">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@mipmap/category_remove"
                   android:layout_marginTop="5sp"
                   android:layout_marginLeft="10sp"
                  />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/setting_tv_clean"
                  android:text="@string/clear_data"
                  android:onClick="onClick"
                  android:textSize="16sp"
                  android:textStyle="bold"
                  android:padding="8sp"
                  android:background="@color/white"/>
    </LinearLayout>

</LinearLayout>