<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/grey_f3f3f3"
              android:orientation="vertical">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="20sp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/item_mainlv_top_tv_expense_text"
                  android:text="@string/month_expense"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/item_mainlv_top_tv_expense_value"
                  android:text="$ 0"
                  android:textStyle="bold"
                  android:layout_below="@id/item_mainlv_top_tv_expense_text"
                  android:textSize="26sp"
                  android:layout_marginTop="10sp"
                  android:layout_marginBottom="10sp"
                  android:textColor="@color/black"/>
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:id="@+id/item_mainlv_top_iv_hide"
                   android:layout_alignParentRight="true"
                   android:src="@mipmap/ih_show"
                   android:layout_alignTop="@id/item_mainlv_top_tv_expense_value"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/item_mainlv_top_tv_income_text"
                  android:text="@string/month_income"
                  android:layout_below="@id/item_mainlv_top_tv_expense_value"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/item_mainlv_top_tv_income_value"
                  android:text="$ 0"
                  android:layout_below="@id/item_mainlv_top_tv_expense_value"
                  android:layout_toRightOf="@id/item_mainlv_top_tv_income_text"
                  android:textStyle="bold"
                  android:textColor="@color/black"
                  android:layout_marginLeft="5sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/item_mainlv_top_tv_budget_text"
            android:text="@string/budget"
            android:layout_alignBottom="@id/item_mainlv_top_tv_income_text"
            android:layout_toLeftOf="@id/item_mainlv_top_tv_budget_value"
            android:layout_marginLeft="5sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/item_mainlv_top_tv_budget_value"
                  android:text="$ 0"
                  android:textColor="@color/black"
                  android:layout_alignParentRight="true"
                  android:layout_alignBottom="@id/item_mainlv_top_tv_income_text"
                  android:layout_marginLeft="5sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/item_mainlv_top_analysis_text"
                  android:drawableLeft="@mipmap/in_investment_fs"
                  android:layout_below="@id/item_mainlv_top_tv_budget_value"
                  android:layout_marginTop="20sp"
                  android:layout_centerHorizontal="true"
                  android:text="@string/see_excel"
                  android:textColor="@color/lightBlue"
                  android:drawablePadding="10sp"
                  android:gravity="center" />
    </RelativeLayout>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/item_mainlv_top_tv_day"
              android:text="Today's expenditiure $0 Income $0"
              android:textStyle="bold"
              android:layout_marginTop="20sp"
              android:layout_marginBottom="10sp"/>
</LinearLayout>