<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/listLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F1F1F1"
            android:layout_margin="5sp"
            android:orientation="vertical">

        <RelativeLayout
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey_f3f3f3"
                tools:ignore="Orientation">
            <RelativeLayout
                    android:id="@+id/main_top_layout"
                    android:layout_width="match_parent" android:layout_height="50sp">
                <!--click to show left menu-->
                <ImageButton android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/main_btn_more"
                             android:paddingTop="10sp"
                             android:paddingBottom="10sp"
                             android:src="@mipmap/more"
                             android:background="#00000000"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/app_name"
                          android:gravity="center"
                          android:paddingTop="10sp"
                          android:paddingLeft="5sp"
                          android:paddingBottom="10sp"
                          android:textStyle="bold"
                          android:layout_toRightOf="@+id/main_btn_more"
                          android:textSize="18sp"
                          android:textColor="@color/black"/>
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                           android:src="@mipmap/search"
                           android:id="@+id/main_iv_search"
                           android:layout_alignParentRight="true"
                           android:padding="10sp"/>
            </RelativeLayout>
            <ListView android:layout_width="match_parent" android:layout_height="match_parent"
                      android:id="@+id/main_lv"
                      android:layout_below="@id/main_top_layout"
                      android:padding="11sp"
                      android:divider="@null"
                      android:dividerHeight="6sp"
                      android:scrollbars="none"
                      android:background="@color/grey_f3f3f3"/>
            <Button android:layout_width="100sp" android:layout_height="50sp"
                    android:id="@+id/main_btn_add"
                    android:background="@drawable/main_recordbtn_bg"
                    android:text="@string/add_one"
                    android:textStyle="bold"
                    android:layout_margin="20sp"
                    android:drawableRight="@mipmap/add"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"/>
        </RelativeLayout>
    </LinearLayout>

    <!-- Left Menu -->
    <LinearLayout
            android:id="@+id/menu_frame"
            android:layout_width="270sp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/white"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:orientation="horizontal"
                android:background="@color/lightBlue"
                android:gravity="center_vertical"
        >
            <ImageView android:layout_width="100sp"
                       android:layout_height="100sp"
                       android:src="@mipmap/ic_launcher_round"
                       android:paddingLeft="5sp" />
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center" >
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_weight="4"
                          android:textSize="18sp"
                          android:textStyle="bold"
                          android:textColor="@color/white"
                          android:layout_marginBottom="10sp"
                          android:text="@string/app_name"
                          android:gravity="center"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_weight="4"
                          android:textSize="14sp"
                          android:textColor="@color/white"
                          android:textStyle="bold"
                          android:text="@string/introduce"
                          android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/dialog_more_btn_record"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:orientation="horizontal"
                android:background="@color/grey_7D7D7D"
                android:layout_gravity="center_vertical">
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="match_parent"
                       android:src="@mipmap/it_record"
                       android:background="@color/white"
                       android:paddingLeft="25sp" />
            <TextView android:layout_width="0sp"
                      android:layout_height="match_parent"
                      android:layout_weight="4"
                      android:paddingLeft="35sp"
                      android:textSize="16sp"
                      android:textStyle="bold"
                      android:background="@color/white"
                      android:text="@string/hy_record"
                      android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/dialog_more_btn_ana"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:orientation="horizontal"
                android:background="@color/grey_7D7D7D"
                android:layout_gravity="center_vertical">
            <ImageView android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/it_analysis"
                android:background="@color/white"
                android:paddingLeft="25sp" />
            <TextView android:layout_width="0sp"
                      android:layout_height="match_parent"
                      android:layout_weight="4"
                      android:paddingLeft="35sp"
                      android:textSize="16sp"
                      android:textStyle="bold"
                      android:background="@color/white"
                      android:text="@string/at_info"
                      android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/dialog_more_btn_setting"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:orientation="horizontal"
                android:background="@color/grey_7D7D7D"
                android:layout_gravity="center_vertical" >
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="match_parent"
                       android:src="@mipmap/it_settings"
                       android:background="@color/white"
                       android:paddingLeft="25sp" />
            <TextView android:layout_width="0sp"
                      android:layout_height="match_parent"
                      android:layout_weight="4"
                      android:paddingLeft="35sp"
                      android:textSize="16sp"
                      android:textStyle="bold"
                      android:background="@color/white"
                      android:text="@string/setting"
                      android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/dialog_more_btn_help"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:orientation="horizontal"
                android:background="@color/grey_7D7D7D"
                android:layout_gravity="center_vertical" >
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="match_parent"
                       android:src="@mipmap/it_help"
                       android:background="@color/white"
                       android:paddingLeft="25sp" />
            <TextView android:layout_width="0sp"
                      android:layout_height="match_parent"
                      android:layout_weight="4"
                      android:paddingLeft="35sp"
                      android:textSize="16sp"
                      android:textStyle="bold"
                      android:background="@color/white"
                      android:text="@string/app_help"
                      android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/dialog_more_btn_about"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:orientation="horizontal"
                android:background="@color/grey_7D7D7D"
                android:layout_gravity="center_vertical" >
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="match_parent"
                       android:src="@mipmap/it_about"
                       android:background="@color/white"
                       android:paddingLeft="25sp"
            />
            <TextView android:layout_width="0sp"
                      android:layout_height="match_parent"
                      android:layout_weight="4"
                      android:paddingLeft="35sp"
                      android:textSize="16sp"
                      android:textStyle="bold"
                      android:background="@color/white"
                      android:text="@string/about"
                      android:gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>